--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,15 @@ a:hover {
   opacity: 0.8;
 }
 
+h1,
+h2,
+h3,
+h4,
+p,
+a {
+  color: #555;
+}
+
 @media screen and (max-width: 767px) {
   .pc-only {
     display: none;
@@ -177,6 +186,21 @@ a:hover {
 @media screen and (max-width: 767px) {
   .sp-only {
     display: block;
+  }
+}
+
+.container {
+  margin-inline: auto;
+  max-width: 960px;
+}
+@media screen and (max-width: 990px) {
+  .container {
+    margin-inline: 30px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .container {
+    margin-inline: 15px;
   }
 }
 
@@ -309,10 +333,12 @@ a:hover {
   background: url("../img/FV.jpg") center/cover no-repeat;
   position: relative;
   z-index: 0;
+  margin-bottom: 45px;
 }
 @media screen and (max-width: 767px) {
   .fv {
     height: 550px;
+    margin-bottom: 40px;
   }
 }
 
@@ -440,7 +466,6 @@ a:hover {
   bottom: 48px;
   right: 45px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1607843137);
-  color: #fff;
   padding: 14px 15px 18px 15px;
 }
 @media screen and (max-width: 767px) {
@@ -471,6 +496,7 @@ a:hover {
 }
 
 .fv__news-heading {
+  color: #fff;
   font-family: "Archivo Narrow", sans-serif;
   font-size: 20px;
   letter-spacing: 0.05em;
@@ -483,6 +509,7 @@ a:hover {
 }
 
 .fv__news-date {
+  color: #fff;
   font-family: "Archivo Narrow", sans-serif;
   font-size: 12px;
   letter-spacing: 0.05em;
@@ -494,6 +521,7 @@ a:hover {
 }
 
 .fv__news-title {
+  color: #fff;
   font-size: 16px;
   font-weight: bold;
   letter-spacing: 0.05em;
@@ -507,5 +535,101 @@ a:hover {
   .fv__news-title {
     font-size: 12px;
     -webkit-line-clamp: 2;
+  }
+}
+
+.about {
+  position: relative;
+  margin-bottom: 54px;
+  padding-top: 116px;
+  padding-bottom: 282px;
+}
+@media screen and (max-width: 767px) {
+  .about {
+    margin-bottom: 40px;
+    padding-top: 88px;
+    padding-bottom: 136px;
+  }
+}
+
+.about__img {
+  position: absolute;
+}
+.about__img:first-of-type {
+  width: min(14.6412884334vw, 200px);
+  top: 0;
+  left: 0;
+}
+@media screen and (max-width: 767px) {
+  .about__img:first-of-type {
+    width: 64px;
+    left: 19px;
+  }
+}
+.about__img:nth-of-type(2) {
+  width: min(13.2503660322vw, 181px);
+  top: 0;
+  right: 0;
+}
+@media screen and (max-width: 767px) {
+  .about__img:nth-of-type(2) {
+    width: 56px;
+    top: 12px;
+    right: 28px;
+  }
+}
+.about__img:nth-of-type(3) {
+  width: min(14.6412884334vw, 200px);
+  bottom: 68px;
+  left: 108px;
+}
+@media screen and (max-width: 767px) {
+  .about__img:nth-of-type(3) {
+    width: 86px;
+    bottom: 28px;
+    left: 32px;
+  }
+}
+.about__img:last-of-type {
+  width: min(17.2767203514vw, 236px);
+  bottom: 0;
+  right: 24px;
+}
+@media screen and (max-width: 767px) {
+  .about__img:last-of-type {
+    width: 108px;
+    bottom: 0;
+    right: 32px;
+  }
+}
+
+.about__heading {
+  width: 314px;
+  margin: 0 auto 56px;
+}
+@media screen and (max-width: 767px) {
+  .about__heading {
+    width: 232px;
+    margin-bottom: 30px;
+  }
+}
+
+.about__text {
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 2;
+}
+@media screen and (max-width: 374px) {
+  .about__text {
+    font-size: 14px;
+  }
+}
+.about__text + .about__text {
+  margin-top: 24px;
+}
+@media screen and (max-width: 767px) {
+  .about__text + .about__text {
+    margin-top: 36px;
   }
 }/*# sourceMappingURL=style.css.map */
