--- a/scss/layout/_fv.scss
+++ b/scss/layout/_fv.scss
@@ -6,8 +6,10 @@
   background: url("../img/FV.jpg") center/cover no-repeat;
   position: relative;
   z-index: 0;
+  margin-bottom: 45px;
   @include mq(sp) {
     height: 550px;
+    margin-bottom: 40px;
   }
 }
 .fv__content {
@@ -117,7 +119,6 @@
   bottom: 48px;
   right: 45px;
   box-shadow: 0px 3px 6px #00000029;
-  color: #fff;
   padding: 14px 15px 18px 15px;
   @include mq(sp) {
     width: 142px;
@@ -142,6 +143,7 @@
   }
 }
 .fv__news-heading {
+  color: #fff;
   font-family: $font-en;
   font-size: 20px;
   letter-spacing: 0.05em;
@@ -151,6 +153,7 @@
   }
 }
 .fv__news-date {
+  color: #fff;
   font-family: $font-en;
   font-size: 12px;
   letter-spacing: 0.05em;
@@ -159,6 +162,7 @@
   }
 }
 .fv__news-title {
+  color: #fff;
   font-size: 16px;
   font-weight: bold;
   letter-spacing: 0.05em;
