--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ a {
 
 .container {
   margin-inline: auto;
-  width: min(70.2781844802vw, 960px);
+  width: 70.2781844802vw;
 }
 @media screen and (max-width: 990px) {
   .container {
@@ -202,6 +202,34 @@ a {
 @media screen and (max-width: 767px) {
   .container {
     margin-inline: 15px;
+  }
+}
+
+.section__heading {
+  font-size: 40px;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  line-height: 1.3;
+  width: fit-content;
+  position: relative;
+}
+@media screen and (max-width: 767px) {
+  .section__heading {
+    font-size: 30px;
+  }
+}
+.section__heading:before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: url("../img/title-line.svg") center/contain no-repeat;
+  top: 20px;
+  z-index: -1;
+}
+@media screen and (max-width: 767px) {
+  .section__heading:before {
+    top: 12px;
   }
 }
 
@@ -541,13 +569,13 @@ a {
 
 .about {
   position: relative;
-  margin-bottom: 54px;
+  margin-bottom: 45px;
   padding-top: 116px;
   padding-bottom: 282px;
 }
 @media screen and (max-width: 767px) {
   .about {
-    margin-bottom: 40px;
+    margin-bottom: 36px;
     padding-top: 88px;
     padding-bottom: 136px;
   }
@@ -632,5 +660,111 @@ a {
 @media screen and (max-width: 767px) {
   .about__text + .about__text {
     margin-top: 24px;
+  }
+}
+
+.introduction {
+  width: 85.2122986823vw;
+  margin-right: auto;
+  margin-bottom: 113px;
+  border-radius: 0 100px 100px 0;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1607843137);
+  padding: 72px 3.6603221083vw 80px 0;
+  overflow: hidden;
+  display: flex;
+  justify-content: flex-end;
+}
+@media screen and (max-width: 1023px) {
+  .introduction {
+    width: 100%;
+    margin-bottom: 74px;
+    border-radius: 0;
+    padding: 48px 15px 50px;
+    justify-content: center;
+  }
+}
+
+.introduction__inner {
+  width: 66.6178623719vw;
+}
+@media screen and (max-width: 1023px) {
+  .introduction__inner {
+    width: auto;
+  }
+}
+
+.introduction__heading {
+  margin-bottom: 28px;
+}
+@media screen and (max-width: 767px) {
+  .introduction__heading {
+    margin-bottom: 30px;
+  }
+}
+
+.introduction__tabs-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 18px;
+  margin-bottom: 45px;
+}
+@media screen and (max-width: 767px) {
+  .introduction__tabs-wrapper {
+    gap: 8px;
+    margin-bottom: 36px;
+  }
+}
+
+.introduction__tab {
+  width: 190px;
+  height: 65px;
+  text-align: center;
+  line-height: 65px;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 20px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1607843137);
+}
+@media screen and (max-width: 767px) {
+  .introduction__tab:last-child {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .introduction__tab {
+    width: 110px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 16px;
+    border-radius: 10px;
+  }
+}
+.introduction__tab.selected {
+  background-color: #93c572;
+}
+.introduction__tab.selected h3 {
+  color: #fff;
+}
+.introduction__tab h3 {
+  color: #f7b560;
+}
+
+.introduction__paragraph {
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 65px;
+}
+@media screen and (max-width: 767px) {
+  .introduction__paragraph {
+    margin-bottom: 36px;
+  }
+}
+
+.introduction__slide {
+  width: 300px;
+}
+@media screen and (max-width: 767px) {
+  .introduction__slide {
+    width: 250px;
   }
 }/*# sourceMappingURL=style.css.map */
