--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,10 @@ a:hover {
   opacity: 0.8;
 }
 
+button {
+  cursor: pointer;
+}
+
 h1,
 h2,
 h3,
@@ -767,4 +771,99 @@ a {
   .introduction__slide {
     width: 250px;
   }
+}
+
+.faq__heading {
+  margin-inline: auto;
+  margin-bottom: 45px;
+}
+@media screen and (max-width: 767px) {
+  .faq__heading {
+    margin-bottom: 30px;
+  }
+}
+
+.faq__item {
+  background-color: #fff;
+  border: 3px solid #93c572;
+  border-radius: 50px;
+  padding: 20px 40px;
+  position: relative;
+}
+.faq__item + .faq__item {
+  margin-top: 50px;
+}
+.faq__item:before {
+  content: "";
+  position: absolute;
+  width: 3px;
+  height: 20px;
+  background-color: #fff;
+  top: 50%;
+  left: -3px;
+  translate: 0 -50%;
+}
+.faq__item:after {
+  content: "";
+  position: absolute;
+  width: 3px;
+  height: 20px;
+  background-color: #fff;
+  top: 50%;
+  right: -3px;
+  translate: 0 -50%;
+}
+
+.faq__question {
+  border: none;
+  background-color: transparent;
+  cursor: unset;
+  display: flex;
+  align-items: center;
+  gap: 18px;
+  padding: 0;
+  position: relative;
+}
+@media screen and (max-width: 767px) {
+  .faq__question {
+    gap: 10px;
+  }
+}
+.faq__question span {
+  font-family: "Archivo Narrow", sans-serif;
+  font-size: 35px;
+  color: #93c572;
+}
+.faq__question p {
+  font-family: "Yu Gothic", "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Meiryo", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 1.5;
+}
+.faq__question:before {
+  content: "";
+  position: absolute;
+}
+
+.faq__answer {
+  display: flex;
+  align-items: center;
+  gap: 18px;
+  margin-top: 24px;
+}
+@media screen and (max-width: 767px) {
+  .faq__answer {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 12px;
+  }
+}
+.faq__answer span {
+  font-family: "Archivo Narrow", sans-serif;
+  font-size: 35px;
+  color: #f7b560;
+}
+.faq__answer p {
+  font-size: 20px;
+  line-height: 1.35;
 }/*# sourceMappingURL=style.css.map */
