--- a/css/style.css
+++ b/css/style.css
@@ -790,8 +790,18 @@ a {
   padding: 20px 40px;
   position: relative;
 }
+@media screen and (max-width: 767px) {
+  .faq__item {
+    padding: 30px 20px 25px;
+  }
+}
 .faq__item + .faq__item {
   margin-top: 50px;
+}
+@media screen and (max-width: 767px) {
+  .faq__item + .faq__item {
+    margin-top: 30px;
+  }
 }
 .faq__item:before {
   content: "";
@@ -813,6 +823,9 @@ a {
   right: -3px;
   translate: 0 -50%;
 }
+.faq__item.opened .faq__question::after {
+  rotate: 0deg;
+}
 
 .faq__question {
   border: none;
@@ -823,6 +836,7 @@ a {
   gap: 18px;
   padding: 0;
   position: relative;
+  width: 100%;
 }
 @media screen and (max-width: 767px) {
   .faq__question {
@@ -834,15 +848,53 @@ a {
   font-size: 35px;
   color: #93c572;
 }
+@media screen and (max-width: 767px) {
+  .faq__question span {
+    font-size: 25px;
+  }
+}
 .faq__question p {
   font-family: "Yu Gothic", "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Meiryo", sans-serif;
   font-size: 20px;
   font-weight: bold;
   line-height: 1.5;
+  text-align: left;
+}
+@media screen and (max-width: 767px) {
+  .faq__question p {
+    width: 64vw;
+  }
 }
 .faq__question:before {
   content: "";
   position: absolute;
+  width: 20px;
+  height: 3px;
+  background-color: #93c572;
+  top: 50%;
+  right: 0;
+  translate: 0 -50%;
+}
+@media screen and (max-width: 767px) {
+  .faq__question:before {
+    width: 15px;
+  }
+}
+.faq__question:after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 3px;
+  background-color: #93c572;
+  top: 50%;
+  right: 0;
+  translate: 0 -50%;
+  rotate: 90deg;
+}
+@media screen and (max-width: 767px) {
+  .faq__question:after {
+    width: 15px;
+  }
 }
 
 .faq__answer {
@@ -862,6 +914,11 @@ a {
   font-family: "Archivo Narrow", sans-serif;
   font-size: 35px;
   color: #f7b560;
+}
+@media screen and (max-width: 767px) {
+  .faq__answer span {
+    font-size: 25px;
+  }
 }
 .faq__answer p {
   font-size: 20px;
