--- a/scss/layout/_faq.scss
+++ b/scss/layout/_faq.scss
@@ -15,8 +15,14 @@
   border-radius: 50px;
   padding: 20px 40px;
   position: relative;
+  @include mq(sp) {
+    padding: 30px 20px 25px;
+  }
   + .faq__item {
     margin-top: 50px;
+    @include mq(sp) {
+      margin-top: 30px;
+    }
   }
   &:before {
     content: "";
@@ -38,6 +44,11 @@
     right: -3px;
     translate: 0 -50%;
   }
+  &.opened {
+    .faq__question::after {
+      rotate: 0deg;
+    }
+  }
 }
 .faq__question {
   border: none;
@@ -48,6 +59,7 @@
   gap: 18px;
   padding: 0;
   position: relative;
+  width: 100%;
   @include mq(sp) {
     gap: 10px;
   }
@@ -55,6 +67,9 @@
     font-family: $font-en;
     font-size: 35px;
     color: $primary;
+    @include mq(sp) {
+      font-size: 25px;
+    }
   }
   p {
     font-family: "Yu Gothic", "Helvetica Neue", "Helvetica", "Hiragino Sans",
@@ -62,10 +77,37 @@
     font-size: 20px;
     font-weight: bold;
     line-height: 1.5;
+    text-align: left;
+    @include mq(sp) {
+      width: calc((240 / 375) * 100vw);
+    }
   }
   &:before {
     content: "";
     position: absolute;
+    width: 20px;
+    height: 3px;
+    background-color: $primary;
+    top: 50%;
+    right: 0;
+    translate: 0 -50%;
+    @include mq(sp) {
+      width: 15px;
+    }
+  }
+  &:after {
+    content: "";
+    position: absolute;
+    width: 20px;
+    height: 3px;
+    background-color: $primary;
+    top: 50%;
+    right: 0;
+    translate: 0 -50%;
+    rotate: 90deg;
+    @include mq(sp) {
+      width: 15px;
+    }
   }
 }
 .faq__answer {
@@ -82,6 +124,9 @@
     font-family: $font-en;
     font-size: 35px;
     color: $secondary;
+    @include mq(sp) {
+      font-size: 25px;
+    }
   }
   p {
     font-size: 20px;
