--- a/scss/layout/_introduction.scss
+++ b/scss/layout/_introduction.scss
@@ -10,6 +10,7 @@
   overflow: hidden;
   display: flex;
   justify-content: flex-end;
+  background-color: #fff;
   @media screen and (max-width: 1023px) {
     width: 100%;
     margin-bottom: 74px;
