--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ h3,
 h4,
 p,
 a {
-  color: #555;
+  color: #555555;
 }
 
 @media screen and (max-width: 767px) {
@@ -956,13 +956,15 @@ a {
 
 .top-news {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   gap: 80px;
+  margin-bottom: 110px;
 }
 @media screen and (max-width: 767px) {
   .top-news {
-    flex-direction: column;
-    gap: 30px;
+    display: block;
+    margin-bottom: 75px;
   }
 }
 
@@ -978,31 +980,36 @@ a {
 .top-news__description {
   font-size: 16px;
   line-height: 1.3;
-  margin-bottom: 60px;
+  margin-bottom: 50px;
 }
 @media screen and (max-width: 767px) {
   .top-news__description {
-    margin-bottom: 0;
+    margin-bottom: 40px;
   }
 }
 
+.top-news__btn {
+  margin-inline: auto;
+}
+
 .top-news__inner {
+  flex-shrink: 0;
   width: 50vw;
   margin-right: calc(50% - 50vw);
-  flex-shrink: 0;
-  padding: 80px 0 80px 3.6603221083vw;
   background-color: #fff;
   border-radius: 100px 0 0 100px;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1607843137);
+  padding: 80px 40px 80px 50px;
 }
 @media screen and (max-width: 767px) {
   .top-news__inner {
-    width: 96.2666666667vw;
-    padding: 30px 20px;
+    width: 96vw;
+    margin: 0 0 30px auto;
     border-radius: 50px 0 0 50px;
+    padding: 30px 20px;
   }
 }
-.top-news__inner li:last-child a {
+.top-news__inner li:last-child .top-news__article {
   padding-bottom: 0;
 }
 
@@ -1010,25 +1017,103 @@ a {
   padding-bottom: 30px;
 }
 
-.top-news_article-info {
+.top-news__article-info {
   display: flex;
   align-items: center;
-  gap: 12px 4px;
-  flex-wrap: wrap;
+  gap: 12px;
   margin-bottom: 16px;
 }
+@media screen and (max-width: 767px) {
+  .top-news__article-info {
+    margin-bottom: 10px;
+  }
+}
 
-.top-news__article-time {
-  color: #555555;
+.top-news__article-date {
   font-family: "Archivo Narrow", sans-serif;
   font-size: 16px;
   letter-spacing: 0.05em;
+  line-height: 1.3;
+}
+@media screen and (max-width: 767px) {
+  .top-news__article-date {
+    font-size: 14px;
+  }
 }
 
-.top-news__article-category {
+.top-new__article-cats {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4px 8px;
+}
+
+.top-news__article-cat {
   padding: 4px 28px;
   background-color: #93c572;
   border-radius: 5px;
+  text-align: center;
   color: #fff;
   font-size: 14px;
+}
+
+.top-news__article-title {
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 1.3;
+}
+@media screen and (max-width: 767px) {
+  .top-news__article-title {
+    font-size: 16px;
+  }
+}
+
+.access {
+  margin-bottom: 160px;
+}
+@media screen and (max-width: 767px) {
+  .access {
+    margin-bottom: 80px;
+  }
+}
+
+.access__heading {
+  margin-inline: auto;
+  margin-bottom: 45px;
+}
+@media screen and (max-width: 767px) {
+  .access__heading {
+    margin-bottom: 42px;
+  }
+}
+
+.access__table {
+  width: 100%;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1607843137);
+  border-radius: 100px;
+  overflow: hidden;
+}
+@media screen and (max-width: 767px) {
+  .access__table {
+    border-radius: 50px;
+  }
+}
+.access__table th {
+  width: 250px;
+  background-color: #93c572;
+  color: #555555;
+  font-size: 16px;
+  font-weight: bold;
+  padding-left: 50px;
+  text-align: start;
+}
+.access__table th:first-child {
+  padding-top: 76px;
+}
+@media screen and (max-width: 767px) {
+  .access__table th {
+    width: 140px;
+  }
+}
+.access__table td {
+  background-color: #fff;
 }/*# sourceMappingURL=style.css.map */
