--- a/scss/layout/_top-news.scss
+++ b/scss/layout/_top-news.scss
@@ -2,11 +2,13 @@
 
 .top-news {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   gap: 80px;
+  margin-bottom: 110px;
   @include mq(sp) {
-    flex-direction: column;
-    gap: 30px;
+    display: block;
+    margin-bottom: 75px;
   }
 }
 .top-news__heading {
@@ -18,53 +20,75 @@
 .top-news__description {
   font-size: 16px;
   line-height: 1.3;
-  margin-bottom: 60px;
+  margin-bottom: 50px;
   @include mq(sp) {
-    margin-bottom: 0;
+    margin-bottom: 40px;
   }
 }
+.top-news__btn {
+  margin-inline: auto;
+}
 .top-news__inner {
+  flex-shrink: 0;
   width: 50vw;
   margin-right: calc(50% - 50vw);
-  flex-shrink: 0;
-  padding: 80px 0 80px calc((50 / 1366) * 100vw);
   background-color: #fff;
   border-radius: 100px 0 0 100px;
   box-shadow: 1px 1px 10px #00000029;
+  padding: 80px 40px 80px 50px;
   @include mq(sp) {
-    width: calc((361 / 375) * 100vw);
-    padding: 30px 20px;
+    width: calc((360 / 375) * 100vw);
+    margin: 0 0 30px auto;
     border-radius: 50px 0 0 50px;
+    padding: 30px 20px;
   }
-  li:last-child a {
-    padding-bottom: 0;
+  li:last-child {
+    .top-news__article {
+      padding-bottom: 0;
+    }
   }
 }
+
 .top-news__article {
   padding-bottom: 30px;
 }
-.top-news_article-info {
+
+.top-news__article-info {
   display: flex;
   align-items: center;
-  gap: 12px 4px;
-  flex-wrap: wrap;
+  gap: 12px;
   margin-bottom: 16px;
+  @include mq(sp) {
+    margin-bottom: 10px;
+  }
 }
-.top-news__article-time {
-  color: $text-color;
+.top-news__article-date {
   font-family: $font-en;
   font-size: 16px;
   letter-spacing: 0.05em;
+  line-height: 1.3;
+  @include mq(sp) {
+    font-size: 14px;
+  }
 }
-.top-news__article-cateogyr-wrapp {
+.top-new__article-cats {
   display: flex;
+  flex-wrap: wrap;
+  gap: 4px 8px;
 }
-.top-news__article-category {
+.top-news__article-cat {
   padding: 4px 28px;
   background-color: $primary;
   border-radius: 5px;
+  text-align: center;
   color: #fff;
   font-size: 14px;
 }
 .top-news__article-title {
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 1.3;
+  @include mq(sp) {
+    font-size: 16px;
+  }
 }
