--- a/scss/foundation/_basic.scss
+++ b/scss/foundation/_basic.scss
@@ -12,6 +12,9 @@ body {
   overflow-x: hidden;
   background-color: #f9f9f9;
 }
+main {
+  overflow-x: hidden;
+}
 img {
   width: 100%;
   height: auto;
