--- a/scss/layout/_top-news.scss
+++ b/scss/layout/_top-news.scss
@@ -88,6 +88,10 @@
   font-size: 20px;
   font-weight: bold;
   line-height: 1.3;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
   @include mq(sp) {
     font-size: 16px;
   }
