--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,7 @@ a {
   text-transform: capitalize;
 }
 .btn-ja {
+  font-family: "Yu Gothic", "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Meiryo", sans-serif;
   font-weight: bold;
 }
 
@@ -1094,11 +1095,19 @@ a {
   }
 }
 
-.access__table {
-  width: 100%;
+.access__table-wrapper {
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1607843137);
   border-radius: 100px;
   overflow: hidden;
+}
+@media screen and (max-width: 767px) {
+  .access__table-wrapper {
+    border-radius: 50px;
+  }
+}
+
+.access__table {
+  width: 100%;
 }
 @media screen and (max-width: 767px) {
   .access__table {
@@ -1108,8 +1117,19 @@ a {
 .access__table tr:first-child th {
   padding-top: 76px;
 }
+@media screen and (max-width: 767px) {
+  .access__table tr:first-child th {
+    padding-top: 30px;
+  }
+}
 .access__table tr:nth-child(n+1):nth-child(-n+4) td {
   padding-left: 50px;
+}
+@media screen and (max-width: 767px) {
+  .access__table tr:nth-child(n+1):nth-child(-n+4) td {
+    padding-left: 20px;
+    padding-top: 24px;
+  }
 }
 .access__table tr:nth-child(n+2):nth-child(-n+4) th {
   padding-top: 24px;
@@ -1117,21 +1137,42 @@ a {
 .access__table tr:nth-child(4) th {
   padding-bottom: 50px;
 }
+@media screen and (max-width: 767px) {
+  .access__table tr:nth-child(4) th {
+    padding-bottom: 0;
+  }
+}
 .access__table tr:nth-child(4) td {
   padding-bottom: 50px;
 }
+@media screen and (max-width: 767px) {
+  .access__table tr:nth-child(4) td {
+    padding-bottom: 0;
+  }
+}
 .access__table tr:nth-child(5) th {
   padding-top: 20px;
+}
+@media screen and (max-width: 767px) {
+  .access__table tr:nth-child(5) th {
+    padding-top: 30px;
+    padding-bottom: 32px;
+  }
 }
 .access__table tr:nth-child(5) th a {
   margin-top: 20px;
   text-decoration: underline;
 }
+@media screen and (max-width: 767px) {
+  .access__table tr:nth-child(5) th a {
+    font-size: 12px;
+  }
+}
 .access__table th {
   width: 250px;
   background-color: #93c572;
   color: #555555;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: bold;
   padding-left: 50px;
   text-align: start;
@@ -1139,12 +1180,21 @@ a {
 }
 @media screen and (max-width: 767px) {
   .access__table th {
+    font-size: 16px;
     width: 140px;
+    padding-left: 20px;
   }
 }
 .access__table td {
   background-color: #fff;
   vertical-align: bottom;
+  font-size: 16px;
+  line-height: 1.5;
+}
+@media screen and (max-width: 767px) {
+  .access__table td {
+    font-size: 14px;
+  }
 }
 
 .access__gmap-wrapper {
@@ -1154,4 +1204,179 @@ a {
   .access__gmap-wrapper {
     height: 250px;
   }
+}
+
+.section-contact {
+  background-color: #f7b560;
+  border-radius: 50px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1607843137);
+  padding: 45px 20px 50px;
+  margin-bottom: 112px;
+}
+@media screen and (max-width: 767px) {
+  .section-contact {
+    padding-bottom: 40px;
+    margin-bottom: 60px;
+  }
+}
+
+.section-contact__heading {
+  color: #fff;
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 36px;
+  text-align: center;
+}
+@media screen and (max-width: 767px) {
+  .section-contact__heading {
+    font-size: 30px;
+    margin-bottom: 16px;
+  }
+}
+
+.section-contact__text {
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 36px;
+  text-align: center;
+}
+@media screen and (max-width: 767px) {
+  .section-contact__text {
+    margin-bottom: 14px;
+  }
+}
+
+.section-contact__btn {
+  margin-inline: auto;
+  margin-bottom: 36px;
+}
+@media screen and (max-width: 767px) {
+  .section-contact__btn {
+    margin-bottom: 16px;
+  }
+}
+
+.section-contact__bottom {
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 1.4;
+  text-align: center;
+}
+.section-contact__bottom--large {
+  font-size: 30px;
+}
+.section-contact__bottom + .section-contact__bottom {
+  margin-top: 8px;
+}
+@media screen and (max-width: 767px) {
+  .section-contact__bottom + .section-contact__bottom {
+    margin-top: 12px;
+  }
+}
+
+.footer {
+  background-color: #fff;
+  padding: 80px 0 30px;
+}
+@media screen and (max-width: 767px) {
+  .footer {
+    padding: 30px 0 25px;
+  }
+}
+
+.footer__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 28px;
+}
+@media screen and (max-width: 767px) {
+  .footer__container {
+    flex-direction: column;
+    gap: 32px;
+    margin-bottom: 40px;
+  }
+}
+
+.footer__logo {
+  width: 202px;
+  margin-bottom: 42px;
+}
+@media screen and (max-width: 767px) {
+  .footer__logo {
+    margin-bottom: 28px;
+  }
+}
+
+.footer__info-text {
+  color: #555555;
+  font-size: 16px;
+  line-height: 1.3;
+}
+.footer__info-text + .footer__info-text {
+  margin-top: 32px;
+  text-transform: uppercase;
+}
+
+.footer__menu {
+  margin-bottom: 128px;
+}
+@media screen and (max-width: 767px) {
+  .footer__menu {
+    margin-bottom: 28px;
+  }
+}
+.footer__menu ul {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+@media screen and (max-width: 767px) {
+  .footer__menu ul {
+    flex-direction: column;
+    gap: 8px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer__link {
+    width: 100%;
+  }
+}
+
+.footer__link-item {
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 0.05em;
+}
+
+.footer__sns {
+  display: flex;
+  gap: 20px;
+  justify-content: flex-end;
+}
+
+.footer__sns-item {
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
+  border-radius: 25px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1607843137);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer__sns-item .icon {
+  font-family: "Font Awesome 6 Brands", sans-serif;
+  font-size: 25px;
+  opacity: 0.5;
+}
+
+.footer__copyright {
+  font-size: 12px;
+  letter-spacing: 0.05em;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
