--- a/scss/layout/_access.scss
+++ b/scss/layout/_access.scss
@@ -13,11 +13,17 @@
     margin-bottom: 42px;
   }
 }
-.access__table {
-  width: 100%;
-  box-shadow: 0px 3px 6px #00000029;
+
+.access__table-wrapper {
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1607843137);
   border-radius: 100px;
   overflow: hidden;
+  @include mq(sp) {
+    border-radius: 50px;
+  }
+}
+.access__table {
+  width: 100%;
   @include mq(sp) {
     border-radius: 50px;
   }
@@ -25,11 +31,18 @@
     &:first-child {
       th {
         padding-top: 76px;
+        @include mq(sp) {
+          padding-top: 30px;
+        }
       }
     }
     &:nth-child(n + 1):nth-child(-n + 4) {
       td {
         padding-left: 50px;
+        @include mq(sp) {
+          padding-left: 20px;
+          padding-top: 24px;
+        }
       }
     }
     &:nth-child(n + 2):nth-child(-n + 4) {
@@ -40,17 +53,30 @@
     &:nth-child(4) {
       th {
         padding-bottom: 50px;
+        @include mq(sp) {
+          padding-bottom: 0;
+        }
       }
       td {
         padding-bottom: 50px;
+        @include mq(sp) {
+          padding-bottom: 0;
+        }
       }
     }
     &:nth-child(5) {
       th {
         padding-top: 20px;
+        @include mq(sp) {
+          padding-top: 30px;
+          padding-bottom: 32px;
+        }
         a {
           margin-top: 20px;
           text-decoration: underline;
+          @include mq(sp) {
+            font-size: 12px;
+          }
         }
       }
     }
@@ -59,18 +85,25 @@
     width: 250px;
     background-color: $primary;
     color: $text-color;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bold;
     padding-left: 50px;
     text-align: start;
     vertical-align: top;
     @include mq(sp) {
+      font-size: 16px;
       width: 140px;
+      padding-left: 20px;
     }
   }
   td {
     background-color: #fff;
     vertical-align: bottom;
+    font-size: 16px;
+    line-height: 1.5;
+    @include mq(sp) {
+      font-size: 14px;
+    }
   }
 }
 .access__gmap-wrapper {
