--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -142,7 +143,7 @@ html {
 }
 
 body {
-  font-family: "Yu Gothic", "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Meiryo", sans-serif;
+  font-family: "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", sans-serif;
   overflow-x: hidden;
   background-color: #f9f9f9;
 }
@@ -221,6 +222,7 @@ a {
   line-height: 1.3;
   width: fit-content;
   position: relative;
+  z-index: 1;
 }
 @media screen and (max-width: 767px) {
   .section__heading {
@@ -259,6 +261,40 @@ a {
 .btn-ja {
   font-family: "Yu Gothic", "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Meiryo", sans-serif;
   font-weight: bold;
+}
+
+.page-top {
+  margin-top: 140px;
+}
+@media screen and (max-width: 767px) {
+  .page-top {
+    margin-top: 68px;
+  }
+}
+
+.breadcrumb {
+  color: #000;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 72px;
+}
+@media screen and (max-width: 767px) {
+  .breadcrumb {
+    margin-bottom: 36px;
+  }
+}
+
+.breadcrumb-arrow {
+  color: #93c572;
+}
+
+.page__heading {
+  margin-bottom: 45px;
+}
+@media screen and (max-width: 767px) {
+  .page__heading {
+    margin-bottom: 22px;
+  }
 }
 
 .header {
@@ -1274,6 +1310,208 @@ a {
   .section-contact__bottom + .section-contact__bottom {
     margin-top: 12px;
   }
+}
+
+.tabs-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  overflow-x: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  padding: 0 10px 50px 0;
+}
+.tabs-container::-webkit-scrollbar {
+  display: none;
+}
+@media screen and (max-width: 767px) {
+  .tabs-container {
+    justify-content: flex-start;
+    gap: 10px;
+  }
+}
+
+.tab {
+  width: fit-content;
+  height: 44px;
+  padding: 0 30px;
+  background-color: #fff;
+  border-radius: 22px;
+  color: #f7b560;
+  font-size: 16px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1607843137);
+  white-space: nowrap;
+  text-align: center;
+  line-height: 44px;
+}
+.tab.selected {
+  background-color: #93c572;
+  color: #fff;
+}
+
+.archive__inner {
+  background-color: #fff;
+  border-radius: 100px;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1607843137);
+  margin-bottom: 160px;
+  padding: 80px 50px;
+}
+@media screen and (max-width: 767px) {
+  .archive__inner {
+    border-radius: 50px;
+    margin-bottom: 80px;
+    padding: 48px 20px;
+  }
+}
+
+.archive__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 50px;
+  margin-bottom: 50px;
+}
+@media screen and (max-width: 767px) {
+  .archive__list {
+    gap: 30px;
+    margin-bottom: 30px;
+  }
+}
+
+.archive__item {
+  display: flex;
+  align-items: center;
+  gap: 36px;
+}
+@media screen and (max-width: 767px) {
+  .archive__item {
+    width: 305px;
+    display: block;
+    position: relative;
+  }
+}
+
+.archive__thumbnail {
+  width: 230px;
+  flex-shrink: 0;
+  border-radius: 20px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1607843137);
+  overflow: hidden;
+}
+@media screen and (max-width: 767px) {
+  .archive__thumbnail {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .archive__text {
+    position: absolute;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    left: 0;
+    bottom: 0;
+    padding: 4px 12px;
+    border-radius: 0 0 20px 20px;
+  }
+}
+
+.archive__info {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 10px;
+}
+@media screen and (max-width: 767px) {
+  .archive__info {
+    margin-bottom: 6px;
+  }
+}
+
+.archive__time {
+  color: #555555;
+  font-family: "Archivo Narrow", sans-serif;
+  font-size: 14px;
+  letter-spacing: 0.05em;
+}
+
+.archive__cat-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px 12px;
+}
+@media screen and (max-width: 767px) {
+  .archive__cat-wrapper {
+    max-width: 295px;
+    position: absolute;
+    top: -120px;
+    right: 10px;
+  }
+}
+
+.archive__cat-item {
+  display: block;
+  height: 20px;
+  padding: 0 28px;
+  background-color: #93c572;
+  color: #fff;
+  font-size: 14px;
+  text-align: center;
+  line-height: 20px;
+  border-radius: 5px;
+}
+
+.archive__title {
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 1.5;
+  margin-bottom: 16px;
+}
+@media screen and (max-width: 767px) {
+  .archive__title {
+    font-size: 14px;
+    margin-bottom: 0;
+  }
+}
+
+.archive__excerpt {
+  font-size: 14px;
+  line-height: 1.4;
+}
+@media screen and (max-width: 767px) {
+  .archive__excerpt {
+    display: none;
+  }
+}
+
+.pagination {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+  align-items: center;
+}
+
+.pagination-number {
+  width: 50px;
+  height: 50px;
+  background-color: #fafafa;
+  border: 2px solid #f0f3f5;
+  border-radius: 10px;
+  color: #93c572;
+  font-family: "Archivo Narrow", sans-serif;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pagination-number .arrow {
+  font-family: "Font Awesome 6 Free", sans-serif;
+  font-weight: 900;
 }
 
 .footer {
