--- a/scss/foundation/_basic.scss
+++ b/scss/foundation/_basic.scss
@@ -7,8 +7,8 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: "Yu Gothic", "Helvetica Neue", "Helvetica", "Hiragino Sans",
-    "Hiragino Kaku Gothic ProN", "Arial", "Meiryo", sans-serif;
+  font-family: "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium",
+    "游ゴシック", "Yu Gothic", sans-serif;
   overflow-x: hidden;
   background-color: #f9f9f9;
 }
