--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ a {
 }
 @media screen and (max-width: 767px) {
   .page-top {
-    margin-top: 68px;
+    margin-top: 16px;
   }
 }
 
@@ -1512,6 +1512,58 @@ a {
 .pagination-number .arrow {
   font-family: "Font Awesome 6 Free", sans-serif;
   font-weight: 900;
+}
+
+.single__heading {
+  font-size: 40px;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  line-height: 1.3;
+  margin-bottom: 20px;
+}
+@media screen and (max-width: 767px) {
+  .single__heading {
+    font-size: 25px;
+    margin-bottom: 8px;
+  }
+}
+
+.single__info {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  margin-bottom: 50px;
+}
+@media screen and (max-width: 767px) {
+  .single__info {
+    margin-bottom: 40px;
+  }
+}
+
+.single__date {
+  color: #555555;
+  font-family: "Archivo Narrow", sans-serif;
+  font-size: 16px;
+  letter-spacing: 0.05em;
+}
+
+.single__cats-wrapper {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+
+.single__cats-item {
+  display: block;
+  height: 26px;
+  padding: 0 30px;
+  background-color: #93c572;
+  border-radius: 5px;
+  text-align: center;
+  line-height: 26px;
+  color: #fff;
+  font-size: 14px;
 }
 
 .footer {
