--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,11 @@ body {
 main {
   overflow-x: hidden;
 }
+@media screen and (max-width: 1023px) {
+  main {
+    margin-top: 50px;
+  }
+}
 
 img {
   width: 100%;
