--- a/scss/foundation/_basic.scss
+++ b/scss/foundation/_basic.scss
@@ -14,6 +14,9 @@ body {
 }
 main {
   overflow-x: hidden;
+  @media screen and (max-width: 1023px) {
+    margin-top: 50px;
+  }
 }
 img {
   width: 100%;
