--- a/scss/layout/_fv.scss
+++ b/scss/layout/_fv.scss
@@ -24,7 +24,7 @@
   flex-shrink: 0;
 }
 .fv__catch {
-  color: $primary;
+  color: #87b16c;
   font-size: 50px;
   font-weight: bold;
   letter-spacing: 0.15em;
