--- a/css/style.css
+++ b/css/style.css
@@ -475,7 +475,7 @@ a {
 }
 
 .fv__catch {
-  color: #93c572;
+  color: #87b16c;
   font-size: 50px;
   font-weight: bold;
   letter-spacing: 0.15em;
