--- a/scss/component/_page-top.scss
+++ b/scss/component/_page-top.scss
@@ -9,7 +9,8 @@
 .breadcrumb {
   color: #000;
   font-size: 14px;
-  font-weight: bold;
+  font-weight: 500;
+  line-height: 1.5;
   margin-bottom: 72px;
   @include mq(sp) {
     margin-bottom: 36px;
