不要な記述削除

--- a/scss/layout/_fv.scss
+++ b/scss/layout/_fv.scss
@@ -53,6 +53,9 @@
     font-size: 25px;
     text-shadow: none;
   }
+  @include mq(xs) {
+    font-size: 22px;
+  }
 }
 .fv__catch-break {
   display: none;
