--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -43,23 +43,6 @@
     border: none;
     position: relative;
   }
-  &.opened {
-    span {
-      &:first-child {
-        top: 8px;
-        rotate: -20deg;
-      }
-      &:nth-child(2) {
-        top: 8px;
-        rotate: 20deg;
-      }
-      &:last-child {
-        &:before {
-          content: "close";
-        }
-      }
-    }
-  }
   span {
     position: absolute;
     width: 20px;
@@ -95,43 +78,12 @@
 
 .header__menu {
   @media screen and (max-width: 1023px) {
-    position: fixed;
-    left: 0;
-    top: 50px;
-    width: 100%;
-    height: 100vh;
-    background-color: #f9f9f9;
-    box-shadow: inset 0px 6px 6px -3px rgba(0, 0, 0, 0.1607843137);
-    padding: 0 15px;
-    translate: 100vw 0;
-    transition: $transition;
-    &.opened {
-      translate: 0 0;
-    }
-    .sp-only {
-      display: block;
-    }
-    ul {
-      flex-direction: column;
-    }
-    li {
-      width: 100%;
-      border-bottom: 1px solid $primary;
-      &:nth-last-child(2) {
-        border-bottom: none;
-      }
-      &:last-child {
-        border-bottom: none;
-      }
-    }
+    display: none;
   }
   ul {
     display: flex;
     gap: calc((20 / 1366) * 100vw);
     align-items: center;
-    @media screen and (max-width: 1023px) {
-      gap: 0;
-    }
   }
 }
 .header__link {
@@ -140,55 +92,6 @@
   font-size: 16px;
   letter-spacing: 0.05em;
   position: relative;
-  @media screen and (max-width: 1023px) {
-    display: flex;
-    gap: 24px;
-    align-items: center;
-    padding: 18px 0;
-    &:before {
-      position: absolute;
-      content: "";
-      width: 25px;
-      height: 2px;
-      background-color: $primary;
-      top: 50%;
-      right: 0;
-      translate: 0 -50%;
-    }
-    &:after {
-      position: absolute;
-      content: "";
-      width: 10px;
-      height: 2px;
-      background-color: $primary;
-      top: 45%;
-      right: 0;
-      translate: 0 -50%;
-      rotate: 30deg;
-    }
-  }
-
-  span {
-    color: $secondary;
-    font-family: $font-en;
-    font-size: 12px;
-    font-weight: 400;
-    letter-spacing: 0.05em;
-    line-height: 1.3;
-    text-transform: uppercase;
-  }
-}
-.header__link--tel {
-  text-align: center;
-  color: $primary;
-  font-size: 14px;
-  font-weight: bold;
-  line-height: 1.5;
-  margin-top: 16px;
-}
-.header__link--tel-large {
-  font-size: 20px;
-  margin-top: 8px;
 }
 .header__link--contact {
   display: block;
@@ -201,8 +104,4 @@
   font-weight: bold;
   text-align: center;
   line-height: 48px;
-  @media screen and (max-width: 1023px) {
-    width: 300px;
-    margin: 24px auto 0;
-  }
 }
