レイアウト崩れ微調整

--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,10 @@ table {
 
 html {
   scroll-behavior: smooth;
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 body {
@@ -883,8 +887,13 @@ a {
     width: 100%;
     margin-bottom: 74px;
     border-radius: 0;
-    padding: 48px 15px 50px;
-    justify-content: center;
+    padding: 48px 30px 50px;
+    justify-content: left;
+  }
+}
+@media screen and (max-width: 767px) {
+  .introduction {
+    padding-inline: 15px;
   }
 }
 
@@ -941,6 +950,11 @@ a {
     line-height: 50px;
     font-size: 16px;
     border-radius: 10px;
+  }
+}
+@media screen and (max-width: 374px) {
+  .introduction__tab {
+    width: 106px;
   }
 }
 .introduction__tab.selected {
@@ -1144,7 +1158,14 @@ a {
 @media screen and (max-width: 767px) {
   .top-news {
     display: block;
+    margin-inline: auto;
     margin-bottom: 75px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .top-news__intro {
+    margin-inline: 15px;
   }
 }
 
@@ -1759,6 +1780,7 @@ a {
   font-size: 16px;
   font-weight: bold;
   letter-spacing: 0.05em;
+  line-height: 1.5;
 }
 .toc__h2:before {
   content: counter(h2-num) ".";
@@ -1767,8 +1789,11 @@ a {
 
 .toc__h3 {
   padding-left: 1.5em;
+  position: relative;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 1.5;
 }
-
 .footer {
   background-color: #fff;
   padding: 80px 0 30px;
