--- a/scss/layout/_archive.scss
+++ b/scss/layout/_archive.scss
@@ -134,14 +134,23 @@
   font-weight: bold;
   line-height: 1.5;
   margin-bottom: 16px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
   @include mq(sp) {
     font-size: 14px;
     margin-bottom: 0;
+    -webkit-line-clamp: 2;
   }
 }
 .archive__excerpt {
   font-size: 14px;
   line-height: 1.4;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
   @include mq(sp) {
     display: none;
   }
