--- a/scss/layout/_faq.scss
+++ b/scss/layout/_faq.scss
@@ -75,7 +75,7 @@
       font-size: 25px;
     }
   }
-  p {
+  h3 {
     font-family: "Yu Gothic", "Helvetica Neue", "Helvetica", "Hiragino Sans",
       "Hiragino Kaku Gothic ProN", "Arial", "Meiryo", sans-serif;
     font-size: 20px;
