--- a/css/style.css
+++ b/css/style.css
@@ -235,12 +235,13 @@ a {
 }
 .container-second {
   width: 43.9238653001vw;
-  max-width: 600px;
+  min-width: 600px;
   margin-inline: auto;
 }
 @media screen and (max-width: 767px) {
   .container-second {
     width: auto;
+    min-width: auto;
     margin-inline: 20px;
   }
 }
@@ -288,6 +289,10 @@ a {
   letter-spacing: 0.1em;
   text-transform: capitalize;
 }
+.btn:hover {
+  background-color: #93c572;
+  color: #fff;
+}
 .btn-ja {
   font-family: "Yu Gothic", "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Meiryo", sans-serif;
   font-weight: bold;
@@ -296,7 +301,7 @@ a {
 .page-top {
   margin-top: 140px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1023px) {
   .page-top {
     margin-top: 16px;
   }
@@ -325,6 +330,18 @@ a {
 @media screen and (max-width: 767px) {
   .page__heading {
     margin-bottom: 22px;
+  }
+}
+
+.page-top__description {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.3;
+  margin-bottom: 48px;
+}
+@media screen and (max-width: 767px) {
+  .page-top__description {
+    margin-bottom: 64px;
   }
 }
 
@@ -468,6 +485,14 @@ a {
     gap: 0;
   }
 }
+.header__menu ul li:first-child {
+  display: none;
+}
+@media screen and (max-width: 1023px) {
+  .header__menu ul li:first-child {
+    display: block;
+  }
+}
 
 .header__link {
   color: #3b4043;
@@ -518,15 +543,26 @@ a {
 .header__link--tel {
   text-align: center;
   color: #93c572;
-  font-size: 14px;
+  font-size: 20px;
   font-weight: bold;
   line-height: 1.5;
-  margin-top: 16px;
+  margin-top: 30px;
+}
+@media screen and (max-width: 767px) {
+  .header__link--tel {
+    font-size: 14px;
+    margin-top: 16px;
+  }
 }
 
 .header__link--tel-large {
-  font-size: 20px;
+  font-size: 30px;
   margin-top: 8px;
+}
+@media screen and (max-width: 767px) {
+  .header__link--tel-large {
+    font-size: 20px;
+  }
 }
 
 .header__link--contact {
@@ -1076,7 +1112,7 @@ a {
     font-size: 25px;
   }
 }
-.faq__question p {
+.faq__question h3 {
   font-family: "Yu Gothic", "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Meiryo", sans-serif;
   font-size: 20px;
   font-weight: bold;
@@ -1084,7 +1120,7 @@ a {
   text-align: left;
 }
 @media screen and (max-width: 767px) {
-  .faq__question p {
+  .faq__question h3 {
     width: 64vw;
   }
 }
@@ -1631,17 +1667,26 @@ a {
   font-weight: bold;
   line-height: 1.5;
   margin-bottom: 16px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
 }
 @media screen and (max-width: 767px) {
   .archive__title {
     font-size: 14px;
     margin-bottom: 0;
+    -webkit-line-clamp: 2;
   }
 }
 
 .archive__excerpt {
   font-size: 14px;
   line-height: 1.4;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
 }
 @media screen and (max-width: 767px) {
   .archive__excerpt {
@@ -1788,12 +1833,265 @@ a {
 }
 
 .toc__h3 {
-  padding-left: 1.5em;
+  padding-left: 2.5em;
   position: relative;
   font-size: 14px;
   font-weight: bold;
   line-height: 1.5;
 }
+.toc__h3:before {
+  position: absolute;
+  content: "";
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: #93c572;
+  top: 0.5em;
+  left: 1.5em;
+}
+
+.single-section {
+  margin-bottom: 120px;
+}
+@media screen and (max-width: 767px) {
+  .single-section {
+    margin-bottom: 100px;
+  }
+}
+
+.single-section__subheading {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1.3;
+  width: fit-content;
+  margin-bottom: 20px;
+  border-bottom: 2px solid #93c572;
+}
+@media screen and (max-width: 767px) {
+  .single-section__subheading {
+    font-size: 20px;
+    margin-bottom: 16px;
+  }
+}
+
+.single-section__subsubheading {
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 1.35;
+  padding-left: 1.5em;
+  position: relative;
+  margin-bottom: 16px;
+}
+@media screen and (max-width: 767px) {
+  .single-section__subsubheading {
+    font-size: 18px;
+    margin-bottom: 12px;
+  }
+}
+.single-section__subsubheading:before {
+  position: absolute;
+  content: "";
+  width: 10px;
+  height: 100%;
+  background-color: #93c572;
+  left: 0;
+  top: 0;
+}
+
+.single-section__paragraph {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.3;
+  margin-bottom: 80px;
+}
+@media screen and (max-width: 767px) {
+  .single-section__paragraph {
+    margin-bottom: 60px;
+  }
+}
+
+.single-section__img {
+  margin: 0 0 20px 20px;
+  width: min(21.2298682284vw, 290px);
+  float: right;
+}
+@media screen and (max-width: 767px) {
+  .single-section__img {
+    width: 100%;
+    margin: 0 0 40px;
+    clear: both;
+  }
+}
+
+.single-btn {
+  margin-inline: auto;
+}
+
+.contact__inner {
+  background-color: #fff;
+  border-radius: 100px;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1607843137);
+  margin-bottom: 160px;
+  padding: 80px 50px;
+}
+@media screen and (max-width: 767px) {
+  .contact__inner {
+    border-radius: 50px;
+    margin-bottom: 60px;
+    padding: 30px 20px;
+  }
+}
+
+.contact__container {
+  width: min(43.9238653001vw, 600px);
+  margin-inline: auto;
+}
+@media screen and (max-width: 767px) {
+  .contact__container {
+    width: 100%;
+  }
+}
+
+.contact-item {
+  margin-bottom: 36px;
+  line-height: 1.5;
+  color: #555555;
+}
+
+.contact-label {
+  display: flex;
+  gap: 20px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #555555;
+  margin-bottom: 12px;
+}
+@media screen and (max-width: 767px) {
+  .contact-label {
+    margin-bottom: 8px;
+  }
+}
+
+.required {
+  padding: 4px;
+  font-size: 12px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #93c572;
+  border-radius: 5px;
+}
+
+.contact-input {
+  width: min(36.6032210835vw, 500px);
+  height: 50px;
+  border: 1px solid #93c572;
+  border-radius: 5px;
+  padding-inline: 12px;
+}
+@media screen and (max-width: 767px) {
+  .contact-input {
+    width: 100%;
+  }
+}
+
+.contact-option {
+  width: min(29.2825768668vw, 400px);
+  color: #cbcbcb;
+  position: relative;
+  padding-inline: 20px;
+}
+@media screen and (max-width: 767px) {
+  .contact-option {
+    width: 100%;
+  }
+}
+.contact-option:before {
+  position: absolute;
+  content: "\f077";
+  font-family: "Font Awesome 6 Free";
+  font-weight: 900;
+  color: #93c572;
+  font-size: 16px;
+  top: 50%;
+  right: 20px;
+  translate: 0 -50%;
+}
+.contact-option select {
+  border: none;
+  width: 100%;
+  height: 100%;
+  color: #cbcbcb;
+  background-color: transparent;
+  appearance: none;
+  border: none;
+}
+.contact-option select:focus-visible {
+  border: none;
+}
+
+.contact-message {
+  width: min(43.9238653001vw, 600px);
+  height: 150px;
+  margin-bottom: 50px;
+  padding: 12px;
+}
+@media screen and (max-width: 767px) {
+  .contact-message {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 767px) {
+  .contact-message {
+    margin-bottom: 30px;
+  }
+}
+
+.contact-submit {
+  display: block;
+  margin-inline: auto;
+  width: 200px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 16px;
+}
+
+.contact-thanks__container {
+  text-align: center;
+}
+
+.contact-thanks__title {
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 1.35;
+  margin-bottom: 24px;
+}
+@media screen and (max-width: 767px) {
+  .contact-thanks__title {
+    margin-bottom: 20px;
+  }
+}
+
+.contact-thanks__paragraph {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  margin-bottom: 30px;
+}
+@media screen and (max-width: 767px) {
+  .contact-thanks__paragraph {
+    margin-bottom: 24px;
+  }
+}
+
+.contact-thanks__submit {
+  margin-top: 48px;
+}
+@media screen and (max-width: 767px) {
+  .contact-thanks__submit {
+    margin-top: 28px;
+  }
+}
+
 .footer {
   background-color: #fff;
   padding: 80px 0 30px;
