--- a/scss/component/_page-top.scss
+++ b/scss/component/_page-top.scss
@@ -2,7 +2,7 @@
 
 .page-top {
   margin-top: 140px;
-  @include mq(sp) {
+  @media screen and (max-width: 1023px) {
     margin-top: 16px;
   }
 }
@@ -24,5 +24,14 @@
   margin-bottom: 45px;
   @include mq(sp) {
     margin-bottom: 22px;
+  }
+}
+.page-top__description {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.3;
+  margin-bottom: 48px;
+  @include mq(sp) {
+    margin-bottom: 64px;
   }
 }
