--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -132,6 +132,14 @@
     @media screen and (max-width: 1023px) {
       gap: 0;
     }
+    li {
+      &:first-child {
+        display: none;
+        @media screen and (max-width: 1023px) {
+          display: block;
+        }
+      }
+    }
   }
 }
 .header__link {
@@ -167,7 +175,6 @@
       rotate: 30deg;
     }
   }
-
   span {
     color: $secondary;
     font-family: $font-en;
@@ -181,14 +188,21 @@
 .header__link--tel {
   text-align: center;
   color: $primary;
-  font-size: 14px;
+  font-size: 20px;
   font-weight: bold;
   line-height: 1.5;
-  margin-top: 16px;
+  margin-top: 30px;
+  @include mq(sp) {
+    font-size: 14px;
+    margin-top: 16px;
+  }
 }
 .header__link--tel-large {
-  font-size: 20px;
+  font-size: 30px;
   margin-top: 8px;
+  @include mq(sp) {
+    font-size: 20px;
+  }
 }
 .header__link--contact {
   display: block;
