--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -23,6 +23,14 @@
   margin-bottom: 36px;
   line-height: 1.5;
   color: $text-color;
+  &:first-of-type {
+    .contact-input {
+      padding: 0;
+    }
+    .contact-input {
+      padding: 0;
+    }
+  }
 }
 .contact-label {
   display: flex;
@@ -80,9 +88,7 @@
     background-color: transparent;
     appearance: none;
     border: none;
-    &:focus-visible {
-      border: none;
-    }
+    padding-inline: 20px;
   }
 }
 .contact-message {
