--- a/scss/layout/_faq.scss
+++ b/scss/layout/_faq.scss
@@ -109,16 +109,17 @@
     right: 0;
     translate: 0 -50%;
     rotate: 90deg;
+    transition: $transition;
     @include mq(sp) {
       width: 15px;
     }
   }
 }
 .faq__answer {
-  display: flex;
   align-items: center;
   gap: 18px;
   margin-top: 24px;
+  display: none;
   @include mq(sp) {
     flex-direction: column;
     align-items: flex-start;
