--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -23,6 +23,7 @@
   margin-bottom: 36px;
   line-height: 1.5;
   color: $text-color;
+  position: relative;
 }
 .contact-label {
   display: flex;
@@ -56,10 +57,18 @@
 .contact-option {
   width: min(calc((400 / 1366) * 100vw), 400px);
   color: #cbcbcb;
+  font-size: 16px;
+  font-weight: 500;
   position: relative;
-  padding-inline: 20px;
+  padding: 14px 20px;
+  cursor: pointer;
   @include mq(sp) {
     width: 100%;
+  }
+  &.clicked {
+    &:before {
+      rotate: 180deg;
+    }
   }
   &:before {
     position: absolute;
@@ -71,17 +80,39 @@
     top: 50%;
     right: 20px;
     translate: 0 -50%;
+    transition: $transition;
   }
-  select {
-    border: none;
+}
+.contact-select {
+  border: 1px solid $primary;
+  border-radius: 5px;
+  color: $primary;
+  background-color: #f9f9f9;
+  padding: 0 5px;
+  position: absolute;
+  bottom: 0;
+  translate: 0 100%;
+  left: 0;
+  z-index: 1;
+  width: min(calc((400 / 1366) * 100vw), 400px);
+  display: none;
+  cursor: pointer;
+  @include mq(sp) {
     width: 100%;
-    height: 100%;
-    color: #cbcbcb;
-    background-color: transparent;
-    appearance: none;
-    border: none;
-    &:focus-visible {
+  }
+  span {
+    display: block;
+    padding: 15px;
+    border-bottom: 1px dashed #707070;
+    font-size: 16px;
+    font-weight: bold;
+    color: $primary;
+    transition: $transition;
+    &:last-child {
       border: none;
+    }
+    &:hover {
+      opacity: 0.5;
     }
   }
 }
