--- a/scss/layout/_fv.scss
+++ b/scss/layout/_fv.scss
@@ -3,7 +3,7 @@
 .fv {
   width: 100%;
   height: clamp(600px, 100vh, 768px);
-  background: url("../img/FV.jpg") center/cover no-repeat;
+  background: url("../img/FV.webp") center/cover no-repeat;
   background-attachment: fixed;
   position: relative;
   z-index: 0;
