--- a/scss/layout/_introduction.scss
+++ b/scss/layout/_introduction.scss
@@ -98,7 +98,7 @@
 }
 .introduction__slider {
   display: none;
-  &.slick-initialize {
+  &.slick-initialized {
     display: block;
   }
   .slick-list {
